# Stock-Market-Returns

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  MSCI ACWI USD Gross.xls  MSCI ACWI USD Net.xls  MSCI Singapore USD Net.xls  MSCI Singapore.xls  MSCI World.xls  README.md  data.xlsx  download_ft_data.ipynb  download_ft_fund_data.ipynb  download_ft_index_data.ipynb  download_fullerton_fund_data.ipynb  download_greatlink_fund_data.ipynb  download_mas_data.ipynb  download_msci_data.ipynb  download_shiller_data.ipynb  environment.yml  funcs.py  historyIndex.xls  ie_data.xls  layout.py  models.py  prek.toml  prod-environment.yml  profile_app.py  pyproject.toml  read_ft_data.ipynb  returns.ipynb  returns_dashboard.py  schemas.py  sg_cpi.csv  sgd_interest_rates.csv  update_graph.py  us_cpi.csv
STI Data/: 2008.html  2008.txt
assets/: clientsideCallbacks.js  style.css
data/: Dimensional World Equity Fund GBP Accumulation.csv  FTSE All-World USD Gross.csv  Fullerton SGD Cash Fund A.csv  Fullerton SGD Liquidity Fund A.csv  Fundsmith Equity Fund R EUR Acc.csv  Fundsmith Equity Fund T EUR Acc.csv  GMO Quality Investment Fund.csv  Lion-MariBank_SavePlus_SGD_(Acc).csv  LionGlobal_SGD_Money_Market_Fund_Class_A_SGD_(Acc).csv  MSCI ACWI GROWTH USD Gross Daily 2001-2005.xls  MSCI ACWI GROWTH USD Gross Daily 2011-2015.xls  MSCI ACWI GROWTH USD Gross Daily 2016-2020.xls  MSCI ACWI GROWTH USD Net Daily 2001-2005.xls  MSCI ACWI GROWTH USD Net Daily 2006-2010.xls  MSCI ACWI GROWTH USD Net Daily 2011-2015.xls  MSCI ACWI GROWTH USD Net Daily 2016-2020.xls  MSCI ACWI USD Gross Daily 2001-2005.xls  MSCI ACWI USD Gross Daily 2006-2010.xls  MSCI ACWI USD Gross Daily 2011-2015.xls  MSCI ACWI USD Gross Daily 2016-2020.xls  MSCI ACWI USD Gross.xls  MSCI ACWI USD Net Daily 2001-2005.xls  MSCI ACWI USD Net Daily 2016-2020.xls  MSCI ACWI USD Net Daily 2021-202308.xls  MSCI ACWI USD Net.xls  MSCI ACWI VALUE USD Gross Daily 2001-2005.xls  MSCI ACWI VALUE USD Gross Daily 2006-2010.xls  MSCI ACWI VALUE USD Gross Daily 2011-2015.xls  MSCI ACWI VALUE USD Gross Daily 2021-202308.xls  MSCI ACWI VALUE USD Gross Monthly.xls  MSCI ACWI VALUE USD Net Daily 2001-2005.xls  MSCI ACWI VALUE USD Net Daily 2006-2010.xls  MSCI ACWI VALUE USD Net Daily 2021-202308.xls  MSCI ACWI VALUE USD Net Monthly.xls  MSCI Singapore USD Gross.xls  MSCI Singapore USD Net.xls  MSCI WORLD GROWTH USD Gross Daily 2001-2005.xls  MSCI WORLD GROWTH USD Gross Daily 2006-2010.xls  MSCI WORLD GROWTH USD Gross Daily 2011-2015.xls  MSCI WORLD GROWTH USD Gross Daily 2016-2020.xls  (+45 more)
(+22909 files in other folders)
