[project]
name = "stock-market-returns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.12"
dependencies = [
    "dash-bootstrap-components>=2.0.4",
    "dash[compress]<4",
    "httpx>=0.28.1",
    "pandas<3",
    "plotly>=6.7.0",
    "python-calamine>=0.6.2",
    "scipy>=1.17.1",
    "yfinance>=1.2.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "fastexcel>=0.19.0",
    "lxml>=6.0.4",
    "numba>=0.65.0",
    "orjson>=3.11.8",
]

[dependency-groups]
dev = [
    "geckodriver>=0.0.1",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "ruff>=0.15.10",
    "seaborn>=0.13.2",
    "selenium>=4.43.0",
    "snakeviz>=2.2.2",
]
prod = [
    "gunicorn>=25.3.0",
]
