[project]
name = "stock-market-returns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.14"
dependencies = [
    "dash-bootstrap-components>=2.0.4",
    "dash[compress]>=4.4.0",
    "curl-cffi>=0.15.0",
    "plotly>=6.9.0",
    "scipy>=1.18.0",
    "yfinance>=1.5.1",
    "polars>=1.42.1",
    "fastexcel>=0.20.2",
    "lxml>=6.1.1",
    "numba>=0.66.0",
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "beautifulsoup4>=4.15.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "prek>=0.4.8",
    "pyright>=1.1.411",
    "ruff>=0.15.21",
    "selenium>=4.45.0",
    "snakeviz>=2.2.2",
]
prod = [
    "gunicorn>=26.0.0",
]

[tool.uv]
exclude-newer = "1 days"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
